--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "HashKey",
+  "name": "Hash Key Developer Portal",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "key_t2u_icon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
